--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
   <header class="bg-secondary text-white">
     <div class="container text-center">
-      <h1>ADD TITLE here</h1>
-      <p class="lead">by ADD NAME(S) here</p>
-      <p class="lead">Last updated on ADD CURRENT DATE</p>
+      <h1>Quiz 12, soon to be my data story</h1>
+      <p class="lead">by Viv</p>
+      <p class="lead">Last updated on November 17, 2022</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
