--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section1">Section 1</a>
+            <a class="nav-link js-scroll-trigger" href="#section1">Public Choice</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section2">Section 2</a>
+            <a class="nav-link js-scroll-trigger" href="#section2">Traditional Public Schools</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#section3">Section 3</a>
@@ -53,7 +53,7 @@
 
   <header class="bg-secondary text-white">
     <div class="container text-center">
-      <h1>Quiz 12, soon to be my data story</h1>
+      <h1>Practice title, later to become data story</h1>
       <p class="lead">by Viv</p>
       <p class="lead">Last updated on November 17, 2022</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Section 1</h2>
+          <h2>Public Choice Schools in Hartford, CT</h2>
           <p class="lead">TELL AND SHOW your data story and visualizations. Notice how this paragraph appears in a larger font than others, because the HTML code begins with a "lead" class.</p>
 
           <p>Compose your data story in your Google Doc, because it's easier to write and edit, especially when working with other people. When you're ready, go to this <a href="https://github.com/DataVizForAll/dataviz-story-template">GitHub dataviz-story-template repo</a> to create your own version, and publish it online using Settings > Pages. When your version is published, copy and paste the link into your README file so you can easily click it.</p>
@@ -97,7 +97,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Section 2</h2>
+          <h2>Traditional Public Schools in Hartford, CT</h2>
           <p>Create a separate section to describe how you obtained your data, key steps in your process, and cautions for interpreting its meaning. Write for an audience of future DataViz students who may wish to replicate your steps. Write in HTML format and always include links to data sources, such as <a href='https://public-edsight.ct.gov/'>CT EdSight</a>, and also link to your shared Google Sheets.</p>
         </div>
       </div>
