--- a/index.html
+++ b/index.html
@@ -66,26 +66,22 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Public Choice Schools in Hartford, CT</h2>
-          <p class="lead">TELL AND SHOW your data story and visualizations. Notice how this paragraph appears in a larger font than others, because the HTML code begins with a "lead" class.</p>
+          <p class="lead">The following section will begin to discuss Public choice schools in the Hartford area. These schools include magnet schools, charter schools, and technical schools.</p>
 
-          <p>Compose your data story in your Google Doc, because it's easier to write and edit, especially when working with other people. When you're ready, go to this <a href="https://github.com/DataVizForAll/dataviz-story-template">GitHub dataviz-story-template repo</a> to create your own version, and publish it online using Settings > Pages. When your version is published, copy and paste the link into your README file so you can easily click it.</p>
+          <p>The topic that we looked into was to chart the locations of all public choice or districts and their student population, then we did the same for all traditional public schools in Hartford and the previously agreed upon surrounding areas. Two of our most important findings are immediately visible: that the majority of public choice schools in the Hartford area are magnet schools, and they are highly concentrated in and around the city of Hartford itself. When we then looked at the map of all traditional public schools in the Hartford area we see that they are much more evenly spread out. 
+</p>
 
-          <p>Everyone must demonstrate their ability to create their own sample version for the quiz. Later, if two people are working together to co-author one data story, you may wish to create ONE GitHub account that both of you can access. But only one person at a time can make edits.</p>
+          <p>In figure 1 we see a map of all public choice schools in Hartford and the surrounding area. Each point represents one school. The points vary in size depending on each school’s student population. Using the live link below the map, you can zoom in to make the overlapping points more clear and scroll over each point to see more information about each school. </p>
 
-          <p>In your GitHub copy of this template, open the `index.html` file to see how everything must be written in HTML format. Click the pencil symbol in GithHub to edit the file. HINT: In the upper-right corner, switch the dropdown menu from `No Wrap` to `Soft Wrap` to easily view long segments of code in your screen.</p>
+          
 
-          <p>Paragraphs like this one must begin with a `p` tag and end with a `p` closing tag.</p>
 
-          <p>Links must begin and end with `a` anchor tags, with the web address inside either single or double quotes. If you need guidance, check out this <a href='https://www.w3schools.com/html/html_basic.asp'>W3Schools HTML Tutorial</a>.
 
-          <p>When describing charts, maps, or tables that appear further below, refer to them "...as shown in Figure 1" or "...as shown in Table 1" and include those figure/table numbers in the titles or captions below.</p>
-
-          <p>Embed each of your published visualizations as an HTML iframe code, following instructions in <a href='https://handsondataviz.org/embed.html'>Chapter 9 of HODV</a>, similar to the sample below.</p>
-
+          
          <iframe title="Public Choice Schools in the Hartford, CT Area" aria-label="Map" id="datawrapper-chart-BKztw" src="https://datawrapper.dwcdn.net/BKztw/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="678" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
 
-          <p>ADD CAPTIONS like this -- Figure 1: Explore the <a href="https://datawrapper.dwcdn.net/fdcm0/">interactive chart</a> AND ADD your description of the chart here. Make sure your caption includes a direct link to your published chart or map in case the embed code fails to display.</p>
+          <p>Figure 1: Explore the <a href="https://www.datawrapper.de/_/BKztw/">interactive chart</a> Above is a map of the Hartford, CT showing all public choice schools that fall in the boundaries. The size of the point varies based on the student population.</p>
         </div>
       </div>
     </div>
@@ -113,7 +109,7 @@
           <h2>Section 3</h2>
           <p>Give credit to people, organizations, resources, and tools that helped you to create this data story. Write in HTML format and include links when appropriate. If you wish to cite a reading, use any acceptable bibiography style and include a web link when available, similar to this sample:</p>
 
-          <p> Rebecca Lurye, <a href='https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html'>“New Housing Code in Hartford Would Keep Slumlords from Hiding Behind LLCs,”</a> Hartford Courant, May 31, 2019.</p>
+          <p> “Home.” School+State Finance Project, https://schoolstatefinance.org/. Accessed 11/17/22.</p>
         </div>
       </div>
     </div>
