--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <h2>Section 3</h2>
           <p>Give credit to people, organizations, resources, and tools that helped you to create this data story. Write in HTML format and include links when appropriate. If you wish to cite a reading, use any acceptable bibiography style and include a web link when available, similar to this sample:</p>
 
-          <p> “Home.” School+State Finance Project, https://schoolstatefinance.org/. Accessed 11/17/22.</p>
+          <p> “Home.” School+State Finance Project, "https://schoolstatefinance.org/". Accessed 11/17/22.</p>
         </div>
       </div>
     </div>
